Fri Feb  1 23:04:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* array.c (rb_ary_dup): make returned array the same class as the original
	  array [Bug #7768] [ruby-core:51792]
	* test/ruby/test_array.rb (class TestArray): add test

Fri Feb  1 16:35:34 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (r_object0): prohibit setting instance variables of
	  exising class/module.

Fri Feb  1 14:34:29 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/readline/extconf.rb, ext/readline/readline.c: check
	  RL_PROMPT_START_IGNORE and RL_PROMPT_END_IGNORE directly in
	  readline.c.  Patch by Zachary Scott.  [Bug #7397] [ruby-core:49561]

Thu Jan 31 21:55:00 2013  Charlie Somerville  <charlie@charliesomerville.com>

	* marshal.c (marshal_load): Add documentation warning against using
	  Marshal.load on untrusted data [Bug #7759] [ruby-core:51765]

Thu Jan 31 16:33:27 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (local_push_gen): no assigned but unused variable warnings
	  in eval as well as -e.  [Feature #7730] [ruby-core:51580]

Wed Jan 30 12:30:08 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_signal.rb (test_trap_puts): Fix typo. "sync"
	  should be "STDOUT.sync".

Thu Jan 31 15:39:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* string.c (rb_str_aset_m): Documentation for String#[]= fix
	  Raises an IndexError if Regexp match is out of range.
	  Github fixes #243 Patch by Dmtiriy Budnik

Thu Jan 31 13:54:44 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/socket/raddrinfo.c (rsock_unix_sockaddr_len): return
	  sizeof(sa_family_t) if path is empty.  see "Autobind Feature" in
	  unix(7) for details.

	* ext/socket/lib/socket.rb (unix_socket_abstract_name?): treat an
	  empty path as an abstract name.

	* test/socket/test_unix.rb: related test.

Wed Jan 30 20:58:50 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/basicsocket.c (bsock_getsockname): ignore truncated
	  part of socket address.